--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,34 @@
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import 'tailwindcss';
+
+* {
+    font-family: 'Outfit', sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+@layer base {
+    body {
+        @apply bg-gray-950 text-white antialiased;
+    }
+
+    button {
+        @apply cursor-pointer;
+    }
+}
+
+
+@theme {
+    --color-primary: #8b5cf6;
+    --color-primary-hover: #7c3aed;
+    --color-secondary: #ec4899;
+    --color-dark-bg: #0f172a;
+    --color-dark-card: #1e293b;
+}
+
+
+.container {
+    @apply w-full h-full mx-auto px-5;
+}
