--- a/src/index.css
+++ b/src/index.css
@@ -30,5 +30,5 @@ html {
 
 
 .container {
-    @apply w-full h-full mx-auto px-5;
+    @apply w-full h-full mx-auto px-4 transition-all duration-300 max-w-6xl;
 }
